# anki-deck

./: .env.example  .gitignore  Build a Brazilian Portuguese.md  README.md  pyproject.toml
data/reference/: clean_labels.json  cognate_overrides.csv  pt_es_dict.json  spanish_lemmas.txt
scripts/: prepare_reference_data.py  resume_classify_pipeline.sh  resume_translate_pipeline.sh
src/: __init__.py  cache.py  classify.py  clean.py  clean_heuristics.py  config.py  export.py  filter.py  llm.py  main.py  models.py  normalize.py  openrouter_client.py  rank.py  seed_dict.py  seed_labels.py  translate.py  tts.py
tests/: test_cognate_similarity.py
